--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -4,15 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mandatory Assignment 3"
+    "# Mandatory Assignment 3\n",
+    "\n",
+    "#### MAT-2201 Numerical Methods, UiT The Arctic University of Norway\n",
+    "\n",
+    " Daniel Elisabethsønn Antonsen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing libraries and modules needed for the assignment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "plt.style.use('seaborn-whitegrid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 1\n",
+    "\n",
+    "*Solve Problem 3 from the MAT-2201 exam from December 2019.*\n",
+    "\n",
+    "A quantity $y(t)$ depends on the time variable $t$, is measured in four time points. The measurements are given in the table below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| $t_i$ for $i = 1,...,4$ | $y_i$ for $i = 1,...,4$ |\n",
+    "|------------------------|-------------------------|\n",
+    "| 0                    | 1                     |\n",
+    "| 1                    | 2                     |\n",
+    "| 2                    | 7                     |\n",
+    "| 3                    | 5                     |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (a)\n",
+    "\n",
+    "We are here asked to find a polynomial $P(t)$ of degree $\\leq 2$ that goes through the **first three** points\n",
+    "$$\n",
+    "(t_1, y_1), (t_2, y_2), (t_3, y_3).\n",
+    "$$\n"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
