updated files; completed 1a

--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Mandatory Assignment 3\n",
     "\n",
-    "#### MAT-2201 Numerical Methods, UiT The Arctic University of Norway\n",
+    "#### MAT-2201 Numerical Methods\n",
     "\n",
-    " Daniel Elisabethsønn Antonsen"
+    " Daniel Elisabethsønn Antonsen, UiT"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,44 @@
     "We are here asked to find a polynomial $P(t)$ of degree $\\leq 2$ that goes through the **first three** points\n",
     "$$\n",
     "(t_1, y_1), (t_2, y_2), (t_3, y_3).\n",
-    "$$\n"
+    "$$\n",
+    "\n",
+    "To find the polynomial $P(t)$ we can make use of Lagrange interpolation, which is defined of a degree $leq 2$ as\n",
+    "$$\n",
+    "P_2 (t) = y_1\\frac{(t - t_2) (t - t_3)}{(t_1 - t_2)(t_1 - t_3)} + y_2\\frac{(t - t_1) (t - t_3)}{(t_2 - t_1)(t_2 - t_3)} + y_3\\frac{(t - t_1) (t - t_2)}{(t_3 - t_1)(t_3 - t_2)}\n",
+    "$$\n",
+    "And so by using the values given in the table we can compute the polynomial as\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_2 (t) &= 1 \\frac{(t - 1) (t - 2)}{(0 - 1)(0 - 2)} + 2 \\frac{(t - 0) (t - 2)}{(1 - 0)(1 - 2)} + 7 \\frac{(t - 0) (t - 1)}{(2 - 0)(2 - 1)} \\\\\n",
+    "&= \\frac{1}{2} t^2 - \\frac32 t + 1 - 2t^2 + 2t + \\frac{7}{2} t^2 - \\frac{7}{2} t \\\\\n",
+    "&= \\underline{2t^2 - 3t + 1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "And so a polynomial $P(t)$ of degree $\\leq 2$ is given by\n",
+    "$$\n",
+    "\\boxed{P(t) = 2t^2 - 3t + 1}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (b)\n",
+    "\n",
+    "We are here asked to find a polynomial $S(t)$ of degree $\\leq 2$ that fits the **four** points \n",
+    "$$\n",
+    "(t_1, y_1), (t_2, y_2), (t_3, y_3), (t_4, y_4).\n",
+    "$$\n",
+    "i.e. that **minimizes** the sum given by\n",
+    "$$\n",
+    "\\sum_{i=1}^4 (S(t_i) - y_i)^2.\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
