--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,132 @@
     "\\sum_{i=1}^4 (S(t_i) - y_i)^2.\n",
     "$$\n",
     "\n",
+    "The sum given in the problem, is the squared error or residuals. We can minimize this by using the method of least squares, and if we are given a data set of $m$ data points, can be implemented in three steps.\n",
     "\n",
+    "(1) Choose a model, a parametrized model. This model in our case, will be of the form\n",
+    "$$\n",
+    "S(t) = y = c_1 + c_2 t + c_3 t^2\n",
+    "$$\n",
+    "(2) We then force the model to fit the given data set by substituting in the data points. Each of the data points will then form an equation where all the unknowns are the parameters $c_1$, $c_2$ and $c_3$. This will then form the system of equation given in matrix form as \n",
+    "$$\n",
+    "A C = b\n",
+    "$$\n",
+    "Where $t$ represents the unknown parameters.  \n",
+    "(3) As the last step, we solve the normal equations which gives us the least squares estimate for the parameters $\\bar{C}$. The normal equation in found by computing \n",
+    "$$\n",
+    "A^T A C = A^T b\n",
+    "$$\n",
+    "Or rewriting to \n",
+    "$$\n",
+    "C = (A^T A)^{-1} A^T b\n",
+    "$$\n",
+    "where $C = \\begin{pmatrix} c_1 & c_2 & c_3 \\end{pmatrix}^T$. And so, we can start by considering step $1$ and choose a model of the form \n",
+    "$$\n",
+    "S(t) = y = c_1 + c_2 t + c_3 t^2\n",
+    "$$\n",
+    "Which leads to the system of equations given as\n",
+    "\n",
+    "\\begin{align*}\n",
+    "y_1 &= c_1 + 0 \\cdot c_2 + 0 \\cdot c_3 = 1 \\\\\n",
+    "y_2 &= c_1 + c_2 + c_3 = 2 \\\\\n",
+    "y_3 &= c_1 + 2 c_2 + 4 c_3 = 7 \\\\\n",
+    "y_4 &= c_1 + 3 c_2 + 9 c_3 = 5\n",
+    "\\end{align*}\n",
+    "\n",
+    "Which in matrix form can be written as \n",
+    "$$\n",
+    "\\begin{pmatrix} 1 & 0 & 0 \\\\ 1 & 1 & 1 \\\\ 1 & 2 & 4 \\\\ 1 & 3 & 9 \\end{pmatrix}\n",
+    "\\begin{pmatrix} c_1 \\\\ c_2 \\\\ c_3 \\end{pmatrix} \n",
+    "= \n",
+    "\\begin{pmatrix} 1 \\\\ 2 \\\\ 7 \\\\ 5 \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "We can here begin to solve and so solve the equations by finding the matricies $A^T A$ and $A^T $, before solving the normal equation by hand. Or we can simply use python code to solve the equations by implementing the matricies found above. We will here use the second choice for solving and impelment python code for solving for the coefficients.\n",
+    "\n",
+    "We start by implementing the matricies as arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[1, 0, 0], [1, 1, 1], [1, 2, 4], [1, 3, 9]])\n",
+    "b = np.array([[1], [2], [7], [5]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have implemented the arrays for the known matricies, we can now solvbe the normal equations given as\n",
+    "$$\n",
+    "C = (A^T A)^{-1} A^T b\n",
+    "$$\n",
+    "And so"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The solution for the normal equation is [[ 0.45  3.95 -0.75]]^T\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = np.linalg.inv(A.T@A)@A.T@b\n",
+    "print(f\" The solution for the normal equation is {C.T}^T\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And so, with this result we have that the coefficients are given as \n",
+    "$$\n",
+    "C \n",
+    "= \n",
+    "\\begin{pmatrix} c_1 \\\\ c_2 \\\\ c_3 \\end{pmatrix}\n",
+    "=\n",
+    "\\begin{pmatrix} 0.45 \\\\ 3.95 \\\\ -0.75 \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "Using this result, we get that a polynomial given by\n",
+    "$$\n",
+    "S(t) = -0.75 t^2 + 3.95 t + 0.45\n",
+    "$$\n",
+    "which minimizes the the sum \n",
+    "$$\n",
+    "\\sum_{i = 1}^4 (S(t_i) - y_i)^2.\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (c)\n",
+    "\n",
+    "We are given the matrix\n",
+    "$$\n",
+    "B = \\begin{bmatrix} 1 & 0 \\\\ 1 & 1 \\\\ 1 & 2 \\\\ 1 & 3 \\end{bmatrix}\n",
+    "$$\n",
+    "and is asked to find the **reduced** QR factorization of B, i.e. express B as \n",
+    "$$\n",
+    "B = QR\n",
+    "$$\n",
+    "where \n",
+    "$$\n",
+    "Q = \\begin{bmatrix} \\mathbf{q}_1 & \\mathbf{q}_2 \\end{bmatrix}\n",
+    "$$\n",
+    "is a $4\\times 2$ matrix with orthonormal columns ($\\mathbf{q}_i \\cdot \\mathbf{q}_j = 0$ if $i \\neq j$ and $1$ if $i = j$), and $R$ is an upper-triangular $2\\times 2$ matrix.\n",
     "\n"
    ]
   }
