--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -224,6 +224,81 @@
     "Q = \\begin{bmatrix} \\mathbf{q}_1 & \\mathbf{q}_2 \\end{bmatrix}\n",
     "$$\n",
     "is a $4\\times 2$ matrix with orthonormal columns ($\\mathbf{q}_i \\cdot \\mathbf{q}_j = 0$ if $i \\neq j$ and $1$ if $i = j$), and $R$ is an upper-triangular $2\\times 2$ matrix.\n",
+    "\n",
+    "We can start by computing the QR factorization we can start by setting \n",
+    "$$\n",
+    "y_1 = B_1 = \\begin{bmatrix} 1 \\\\ 1 \\\\ 1 \\\\ 1 \\end{bmatrix}\n",
+    "$$\n",
+    "Then we can further compute the $2$-norm or the Euclidean norm, which gives\n",
+    "$$\n",
+    "r_{1 1} = ||y_1||_2 = \\sqrt{1^2 + 1^2 + 1^2 + 1^2} = \\sqrt{4} = 2\n",
+    "$$\n",
+    "And so, the first unit vector is then found by\n",
+    "$$\n",
+    "q_1 = \\frac{y_1}{||y_1||_2} \n",
+    "= \\frac12 \\begin{bmatrix} 1 \\\\ 1 \\\\ 1 \\\\ 1 \\end{bmatrix}\n",
+    "= \\begin{bmatrix} 1/2 \\\\ 1/2 \\\\ 1/2 \\\\ 1/2 \\end{bmatrix}\n",
+    "$$\n",
+    "Now that we have found the first unit vector or the orthonormal vector, we can continue by finding the second unit vector. This can be found by\n",
+    "$$\n",
+    "y_2 = B_2 - q_1 q_1^T B_2 \n",
+    "= \\begin{bmatrix} 0 \\\\ 1 \\\\ 2 \\\\ 3 \\end{bmatrix} - \\begin{bmatrix} 3/2 \\\\ 3/2 \\\\ 3/2 \\\\ 3/2 \\end{bmatrix}\n",
+    "= \\begin{bmatrix} -3/2 \\\\ -1/2 \\\\ 1/2 \\\\ 3/2 \\end{bmatrix}\n",
+    "$$\n",
+    "We can now compute the $2$-norm for $y_2$ which gives us \n",
+    "$$\n",
+    "r_{2 2} = ||y_2||_2 = \\sqrt{(-3/2)^2 + (-1/2)^2 + (1/2)^2 + (3/2)^2} = \\sqrt{5}\n",
+    "$$\n",
+    "And so the second unit vector is given by \n",
+    "$$\n",
+    "q_2 = \\frac{y_2}{||y_2||_2} = \\frac{1}{\\sqrt{5}} \\begin{bmatrix} -3/2 \\\\ -1/2 \\\\ 1/2 \\\\ 3/2 \\end{bmatrix}\n",
+    "= \\begin{bmatrix} -\\frac{3}{2\\sqrt{5}} \\\\ -\\frac{1}{2\\sqrt{5}} \\\\ \\frac{1}{2\\sqrt{5}} \\\\ \\frac{3}{2\\sqrt{5}} \\end{bmatrix}\n",
+    "$$\n",
+    "We can also find the element which is not on the diagonal by, and since $R$ is upper-triangular we only need to consider \n",
+    "$$\n",
+    "r_{1 2} = q_1^T B_2\n",
+    "$$\n",
+    "And so $r_{1 2} = 3$, which gives that the $QR$ factorization for the matrix $B$ is given in matrix form as\n",
+    "$$\n",
+    "\\boxed{B = \\begin{bmatrix} 1 & 0 \\\\ 1 & 1 \\\\ 1 & 2 \\\\ 1 & 3 \\end{bmatrix}\n",
+    "= \\begin{bmatrix} 1/2 & -\\frac{3}{2\\sqrt{5}} \\\\ 1/2 & -\\frac{1}{2\\sqrt{5}} \\\\ 1/2 & \\frac{1}{2\\sqrt{5}} \\\\ 1/2 & \\frac{3}{2\\sqrt{5}} \\end{bmatrix}\n",
+    "\\begin{bmatrix} 2 & 3 \\\\ 0 & \\sqrt{5} \\end{bmatrix}\n",
+    "= Q R}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (d)\n",
+    "\n",
+    "We are here asked to find a polynomial $U(t)$ of degree $\\leq 1$ that fits the **four** points \n",
+    "$$\n",
+    "(t_1, y_1), (t_2, y_2), (t_3, y_3), (t_4, y_4).\n",
+    "$$\n",
+    "i.e. that **minimizes** the sum \n",
+    "$$\n",
+    "\\sum_{i = 1}^4 (U(t_i) - y_i)^2.\n",
+    "$$\n",
+    "We are asked to do this using the QR factorization of the matrix $B$ found in the previous part.\n",
+    "\n",
+    "If we are given a $m\\times n$ inconsistent system, in matrix form as\n",
+    "$$\n",
+    "Ax = b\n",
+    "$$\n",
+    "then we can solve for the least square solution using the $QR$ factorization by setting\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{R} = upper\\; n\\times n\\; submatrix\\; of\\; R \\\\ \n",
+    "\\hat{d} = upper\\; n\\; entries\\; of\\; d = Q^T b\n",
+    "\\end{align*}\n",
+    "And so, then we need to solve the equation given as \n",
+    "$$\n",
+    "\\hat{R} \\bar{x} = \\hat{d} = Q^T b\n",
+    "$$\n",
+    "for $\\bar{x}$ which is the least square solution to the system $Ax = b$.\n",
     "\n"
    ]
   }
