--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -64,7 +64,7 @@
     "(t_1, y_1), (t_2, y_2), (t_3, y_3).\n",
     "$$\n",
     "\n",
-    "To find the polynomial $P(t)$ we can make use of Lagrange interpolation, which is defined of a degree $leq 2$ as\n",
+    "To find the polynomial $P(t)$ we can make use of Lagrange interpolation, which is defined of a degree $\\leq 2$ as\n",
     "$$\n",
     "P_2 (t) = y_1\\frac{(t - t_2) (t - t_3)}{(t_1 - t_2)(t_1 - t_3)} + y_2\\frac{(t - t_1) (t - t_3)}{(t_2 - t_1)(t_2 - t_3)} + y_3\\frac{(t - t_1) (t - t_2)}{(t_3 - t_1)(t_3 - t_2)}\n",
     "$$\n",
@@ -109,7 +109,7 @@
     "A C = b\n",
     "$$\n",
     "Where $t$ represents the unknown parameters.  \n",
-    "(3) As the last step, we solve the normal equations which gives us the least squares estimate for the parameters $\\bar{C}$. The normal equation in found by computing \n",
+    "(3) As the last step, we solve the normal equations which gives us the least squares estimate for the parameters $C$. The solution for the normal equation in found by computing \n",
     "$$\n",
     "A^T A C = A^T b\n",
     "$$\n",
@@ -138,7 +138,7 @@
     "\\begin{pmatrix} 1 \\\\ 2 \\\\ 7 \\\\ 5 \\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "We can here begin to solve and so solve the equations by finding the matricies $A^T A$ and $A^T $, before solving the normal equation by hand. Or we can simply use python code to solve the equations by implementing the matricies found above. We will here use the second choice for solving and impelment python code for solving for the coefficients.\n",
+    "We can here begin to solve and so solve the equations by finding the matricies $A^T A$ and $A^T $, before solving the normal equation by hand. Or we can simply use python code to solve the equations by implementing the matricies found above. We will here use the second choice for solving and implement python code for solving for the coefficients.\n",
     "\n",
     "We start by implementing the matricies as arrays"
    ]
@@ -298,8 +298,48 @@
     "$$\n",
     "\\hat{R} \\bar{x} = \\hat{d} = Q^T b\n",
     "$$\n",
-    "for $\\bar{x}$ which is the least square solution to the system $Ax = b$.\n",
-    "\n"
+    "for $\\bar{x}$ which is the least square solution to the system $Ax = b$. \n",
+    "\n",
+    "Further we can use the same three steps as described in (b) but with the slight improvisaton of using the $QR$ factorization which is found in (c) instead of solving the normal equation. We are here asked to find a polynomial which is of degree $\\leq 1$, and so our model will be \n",
+    "$$\n",
+    "U(t) = c_1 + c_2 t\n",
+    "$$\n",
+    "And so, the our system of equations will now take the form\n",
+    "\n",
+    "\\begin{align*}\n",
+    "y_1 &= c_1 + 0 \\cdot c_2 = 1 \\\\\n",
+    "y_2 &= c_1 + c_2 = 2 \\\\\n",
+    "y_3 &= c_1 + 2 c_2 = 7 \\\\\n",
+    "y_4 &= c_1 + 3 c_2 = 5\n",
+    "\\end{align*}\n",
+    "\n",
+    "Which we can write in matrix form as\n",
+    "$$\n",
+    "\\begin{pmatrix} 1 & 0 \\\\ 1 & 1 \\\\ 1 & 2 \\\\ 1 & 3 \\end{pmatrix}\n",
+    "\\begin{pmatrix} c_1 \\\\ c_2 \\end{pmatrix}\n",
+    "= \\begin{pmatrix} 1 \\\\ 2 \\\\ 7 \\\\ 5 \\end{pmatrix}\n",
+    "$$\n",
+    "Which we can recognize is has the form $A x = b$, where in this case $B = A$ and $C = x$. And so, using the factorization from (c) we get\n",
+    "$$\n",
+    "\\begin{pmatrix} 2 & 3 \\\\ 0 & \\sqrt{5} \\end{pmatrix} \\begin{pmatrix} c_1 \\\\ c_2 \\end{pmatrix}\n",
+    "= \\begin{pmatrix} 1/2 & 1/2 & 1/2 & 1/2 \\\\ -\\frac{3}{2\\sqrt{5}} & -\\frac{1}{2\\sqrt{5}} & \\frac{1}{2\\sqrt{5}} & \\frac{3}{2\\sqrt{5}}\\end{pmatrix}\n",
+    "\\begin{pmatrix} 1 \\\\ 2 \\\\ 7 \\\\ 5 \\end{pmatrix}\n",
+    "= \\begin{pmatrix} \\frac{15}{2} \\\\ \\frac{17}{2\\sqrt{5}} \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "Solving this system for the $c_1$ and $c_2$, we get that the coefficients are given by\n",
+    "$$\n",
+    "\\begin{pmatrix} c_1 \\\\ c_2 \\end{pmatrix} = \\begin{pmatrix} 6/5 \\\\ 17/10 \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "And so the polynomial $U(t)$ that minimizes the sum \n",
+    "$$\n",
+    "\\sum_{i = 1}^{4} (U(t_i) - y_i)^2\n",
+    "$$\n",
+    "is given by \n",
+    "$$\n",
+    "\\boxed{U(t) = \\frac{17}{10}t + \\frac{6}{5}}\n",
+    "$$\n"
    ]
   }
  ],
