updated file; started on problem 2

--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "import sympy as sp\n",
     "plt.style.use('seaborn-whitegrid')"
    ]
   },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have implemented the arrays for the known matricies, we can now solvbe the normal equations given as\n",
+    "Now that we have implemented the arrays for the known matricies, we can now solve the normal equations given as\n",
     "$$\n",
     "C = (A^T A)^{-1} A^T b\n",
     "$$\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -340,6 +340,299 @@
     "$$\n",
     "\\boxed{U(t) = \\frac{17}{10}t + \\frac{6}{5}}\n",
     "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 2\n",
+    "\n",
+    "We are given the Gauss error function which is given as\n",
+    "$$\n",
+    "erf(x) = \\frac{2}{\\sqrt{\\pi}} \\int_{0}^{x} e^{-t^2} dt\n",
+    "$$\n",
+    "\n",
+    "This is a function that can not be written in terms of elementary functions such as polynomials, trigonometric functions and exponential functions etc. Here our goal is to approximate the Gauss error function using elementary functions on the interval $[0,2]$ in three different ways. The motivation for this is if we can find a good approximation, then we don't have to compute (a numerical approximation of) an integral every time we need to compute $erf(x_0)$ for some $x_0 \\in [0,2]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (a)\n",
+    "\n",
+    "We are here asked to compute the $5$ first derivatives of the Gauss error function ($erf(x)$) and their values at $x = 0$:\n",
+    "$$\n",
+    "erf(0),\\; erf'(0),\\; ...,\\; erf^{(5)}(0).\n",
+    "$$\n",
+    "We are further asked to write down the $5th$-degree Taylor polynomial of $erf(x)$ around $x = 0$ and denote the polynomial by $T_5 (x)$. We are further asked to comment on what the multiplicity of the root $x = 0$ of $erf(x)$. \n",
+    "\n",
+    "For the computations which need to be performed, then we can make use of the SymPy library in Python. This is made to do symbolic computations in Python, and can handle analytic operations such as differentiation and integration. And the functions can be lambdified and further used for numerical computations. All this make the SymPy library good for our purpose, and so we will here make use of this for computing the derivatives and their values at $x = 0$.\n",
+    "\n",
+    "And so, we can start by defining the symbolic expressions for the variables and the Gauss error function. First the variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x t\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, t = sp.symbols('x t')\n",
+    "print(x, t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, we have now defined symbols for the variables that we need so we can now define the Gauss error function using SymPy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "erf = 2 / sp.sqrt(sp.pi) * sp.integrate(sp.exp(-t**2), (t, 0, x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could here have used the already defined Gauss error function inside the library, but to illustrate that it is in fact the Gauss error function given in the problem that is used then we have here choosed to write it out.\n",
+    "\n",
+    "Further we can evaluate the function for a given value $x$, using the $.subs(x, a)$ and $.evalf()$ where $a$ is the given value of interest. It is also worth noting that we can lambdify a function so ot can be used for numerical computations. And so, we can evaluate the error function for $x = 0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "erf(0) = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"erf(0) = {erf.subs(x, 0).evalf()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The value for the Gauss error function at $x = 0$ is $0$ and $x = 0$ is a root of the function.\n",
+    "\n",
+    "We can now compte the first derivative of the Gauss error function using the $.diff(x)$ method from SymPy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{2 e^{- x^{2}}}{\\sqrt{\\pi}}$"
+      ],
+      "text/plain": [
+       "2*exp(-x**2)/sqrt(pi)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derf = erf.diff(x)\n",
+    "derf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 1.12837916709551$"
+      ],
+      "text/plain": [
+       "1.12837916709551"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derf.subs(x, 0).evalf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using this, we find that the first derivative for $erf(x)$ is\n",
+    "$$\n",
+    "erf'(x) = \\frac{2 e^{-x^2}}{\\sqrt{\\pi}}\n",
+    "$$\n",
+    "Which can be evaluated at $x = 0$ to\n",
+    "$$\n",
+    "erf'(0) = \\frac{2}{\\sqrt{\\pi}} \\approx 1.128379\n",
+    "$$\n",
+    "\n",
+    "This can be done for the remainder of the derivativatives, and so we can compute the second derivative and evaluate at $x = 0$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{4 x e^{- x^{2}}}{\\sqrt{\\pi}}$"
+      ],
+      "text/plain": [
+       "-4*x*exp(-x**2)/sqrt(pi)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Computing second derivative of erf\n",
+    "sec_derf = derf.diff(x)\n",
+    "sec_derf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 0$"
+      ],
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluating second derivative at x = 0\n",
+    "sec_derf.subs(x, 0).evalf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And so the second derivative of the $erf(x)$ is given as \n",
+    "$$\n",
+    "erf''(x) = -\\frac{4x e^{-x^2}}{\\sqrt{\\pi}}\n",
+    "$$\n",
+    "Which is evaluated at $x = 0$ as \n",
+    "$$\n",
+    "erf''(0) = 0\n",
+    "$$\n",
+    "\n",
+    "And now for the third derivative of the $erf(x)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{8 x^{2} e^{- x^{2}}}{\\sqrt{\\pi}} - \\frac{4 e^{- x^{2}}}{\\sqrt{\\pi}}$"
+      ],
+      "text/plain": [
+       "8*x**2*exp(-x**2)/sqrt(pi) - 4*exp(-x**2)/sqrt(pi)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Computing third derivative of erf\n",
+    "third_derf = sec_derf.diff(x)\n",
+    "third_derf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle -2.25675833419103$"
+      ],
+      "text/plain": [
+       "-2.25675833419103"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluating third derivative at x = 0\n",
+    "third_derf.subs(x, 0).evalf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And so the third derivative of $erf(x)$ is given as \n",
+    "$$\n",
+    "erf^{(3)} (x) = \\frac{8x^2 e^{- x^{2}}}{\\sqrt{\\pi}} - \\frac{4 e^{- x^{2}}}{\\sqrt{\\pi}}\n",
+    "$$\n",
+    "which is evaluated at $x = 0$ as\n",
+    "$$\n",
+    "erf^{(3)} (0) = -\\frac{4}{\\sqrt{\\pi}} \\approx -2.256758\n",
+    "$$\n",
+    "\n",
+    "\n"
    ]
   }
  ],
