updated file; done problem 1a), started 1b)

--- a/src/MA3.ipynb
+++ b/src/MA3.ipynb
@@ -632,6 +632,171 @@
     "erf^{(3)} (0) = -\\frac{4}{\\sqrt{\\pi}} \\approx -2.256758\n",
     "$$\n",
     "\n",
+    "And now for the fourth derivative of $erf(x)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{16 x^{3} e^{- x^{2}}}{\\sqrt{\\pi}} + \\frac{24 x e^{- x^{2}}}{\\sqrt{\\pi}}$"
+      ],
+      "text/plain": [
+       "-16*x**3*exp(-x**2)/sqrt(pi) + 24*x*exp(-x**2)/sqrt(pi)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Computing fourth derivative of erf\n",
+    "fourth_derf = third_derf.diff(x)\n",
+    "fourth_derf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 0$"
+      ],
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluating fourth derivative at x = 0\n",
+    "fourth_derf.subs(x, 0).evalf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fourth derivative of $erf(x)$ is given by\n",
+    "$$\n",
+    "erf^{(4)} (x) = -\\frac{16 x^3 e^{- x^{2}}}{\\sqrt{\\pi}} + \\frac{24 x e^{- x^{2}}}{\\sqrt{\\pi}}\n",
+    "$$\n",
+    "which is evaluated for $x = 0$ as\n",
+    "$$\n",
+    "erf^{(4)} (0) = 0\n",
+    "$$\n",
+    "\n",
+    "And finally we compute the fifth derivative of $erf(x)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{32 x^{4} e^{- x^{2}}}{\\sqrt{\\pi}} - \\frac{96 x^{2} e^{- x^{2}}}{\\sqrt{\\pi}} + \\frac{24 e^{- x^{2}}}{\\sqrt{\\pi}}$"
+      ],
+      "text/plain": [
+       "32*x**4*exp(-x**2)/sqrt(pi) - 96*x**2*exp(-x**2)/sqrt(pi) + 24*exp(-x**2)/sqrt(pi)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Computing fifth derivative of erf\n",
+    "fifth_derf = fourth_derf.diff(x)\n",
+    "fifth_derf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 13.5405500051462$"
+      ],
+      "text/plain": [
+       "13.5405500051462"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluating fifth derivative at x = 0\n",
+    "fifth_derf.subs(x, 0).evalf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fifth derivative of the Gauss error function is given by \n",
+    "$$\n",
+    "erf^{(5)} (x) = \\frac{32 x^4 e^{- x^{2}}}{\\sqrt{\\pi}} - \\frac{96 x^2 e^{- x^{2}}}{\\sqrt{\\pi}} + \\frac{24 x^2 e^{- x^{2}}}{\\sqrt{\\pi}}\n",
+    "$$\n",
+    "which is evaluated for $x = 0$ as \n",
+    "$$\n",
+    "erf^{(5)} (0) = \\frac{24}{\\sqrt{\\pi}} \\approx 13.540550\n",
+    "$$\n",
+    "\n",
+    "We can now write down the $5th$-degree Taylor polynomial of the error function. The Taylor polynomial of a degree $5$ is defined as\n",
+    "$$\n",
+    "T_5 (x) = \\sum_{n = 0}^5 \\frac{erf^{(n)}(a)}{n!}(x - a)^n\n",
+    "$$\n",
+    "Using the derivatives we get that the Taylor polynomial of degree $5$ for the Gauss error function is given by\n",
+    "$$\n",
+    "T_5 (x) = \\frac{2}{\\sqrt{\\pi}} (x - 0)^1 - \\frac{4}{\\sqrt{\\pi}} (x - 0)^3 + \\frac{24}{\\sqrt{\\pi}} (x - 0)^5\n",
+    "$$\n",
+    "or \n",
+    "$$\n",
+    "\\boxed{T_5 (x) = \\frac{2}{\\sqrt{\\pi}} \\left(x - 2x^3 + 12x^5\\right)}\n",
+    "$$\n",
+    "\n",
+    "The multiplicity of a root $k$ is found by considering the value for the derivatives of the function at the root. If the value for first $m-1$ derivatives of the function is zero and the value for the $m$-th derivative is non-zero, then the multiplicity of the root $k$ is $m$.  \n",
+    "And so since the first derivative of $erf(x)$ is non-zero, then the multiplicity of the root $x = 0$ is *one*.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (b)\n",
+    "\n",
+    "We are here asked to consider the points $(x_1, y_1), ..., (x_5, y_5)$ which are given by\n",
+    "$$\n",
+    " x_1 = 0,\\; \\; x_2 = 1/2,\\; \\; x_3 = 1,\\; \\; x_4 = 3/2, \\; \\; x_5 = 2\n",
+    "$$\n",
+    "and $y_i = e^{-x_i^2}$ for $i = 1, ..., 5$. We are asked to find the $4th$-degree interpolating polynomial $P_4 (x)$ of these points, and compute its anti-derivative. We are also asked to find the polynomial \n",
+    "$$\n",
+    "P_5 (x) = \\int_0^x P_4 (t) dt\n",
+    "$$\n",
+    "We are also asked to elaborate on whether we expect $P_5 (x)$ to be a good approximation to $erf(x)$.\n",
     "\n"
    ]
   }
